<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beam Cable Auto Login</string>
    <string name="password_label">Password</string>
    <string name="login_label"> Login </string>
    <string name="remember_credentials_label">Save</string>
    <string name="logout_label">Logout </string>
    <string name="connectivity_status_label">Status:</string>
    <string name="not_determined_label">Not Determined</string>
    <string name="connected_label">Connected</string>
    <string name="not_connected_label">Not Connected</string>
    <string name="error_label">Error</string>
    <string name="logged_in_user_label">User</string>
    <string name="ipaddress_label">IP Address</string>
    <string name="username_empty_error">User Name cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="network_operation_not_supported_error">Network Operation not supported error</string>
    <string name="menu_clear_credentials">Clear Credentials</string>
    <string name="about">About</string>
    <string name="cleared_saved_credentials">Cleared Saved Credentials</string>
    <string name="title_activity_about">About BeamCable Auto Login</string>
    <string name="action_settings">Settings</string>
    <string name="version">v1.0</string>
    <string name="about_content">This application (unofficial) can help you auto-login and logout of BeamCable Internet. It was created to fix the annoyance of logging into the Beam Cable network each time it logs out.</string>
    <string name="author_label">Author: </string>
	<string name="author">Swaroop</string>
	<string name="version_label">Version </string>
	<string name="project_home_page_label">Project Home</string>
	<string name="project_home_page_field"><a href="https://code.google.com/p/beam-cable-auto-authenticator/">Google Code</a></string>
    
</resources>
