<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_gap"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/banner" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:paddingLeft="2dip"
                android:paddingRight="2dip"
                android:shrinkColumns="*"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top" >

                    <TextView
                        android:id="@+id/about_page_author_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_page_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:gravity="top" >

                    <TextView
                        android:id="@+id/about_page_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_page_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/version" />
                </TableRow>
            </TableLayout>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_weight="1"
                android:gravity="top" >

                <TextView
                    android:id="@+id/project_home_page_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/project_home_page_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/project_home_page_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/project_home_page_field" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" >

                <TextView
                    android:id="@+id/about_page_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:text="@string/about_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" >

                <TextView
                    android:id="@+id/disclaimer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_weight="1"
                    android:text="@string/disclaimer_content" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>