<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".BeamCableAutoAuthenticator" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" 
            android:focusable="true"
			android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/banner"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:shrinkColumns="*"
                    android:stretchColumns="1" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top" >

                        <TextView
                            android:id="@+id/loginLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/login_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/loginField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textEmailAddress" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/passwordLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/password_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/passwordField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/rememberCredentialsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/remember_credentials_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <ToggleButton
                            android:id="@+id/saveCredentialsToggleField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dip"
                            android:text="@string/remember_credentials_label" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/default_gap"
                    android:layout_weight="1"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:shrinkColumns="*"
                    android:stretchColumns="2" >

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/loginManually"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/login_label" />

                        <Button
                            android:id="@+id/logoutManually"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/logout_label" />
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/default_gap"
                    android:layout_weight="1"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:shrinkColumns="*"
                    android:stretchColumns="2"
                    android:id="@+id/tableLayout" >

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/connectivityStatusLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/connectivity_status_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/connectivityStatusField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.7"
                            android:text="@string/not_determined_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/loggedInUserLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/logged_in_user_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/loggedInUserField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_weight="0.7"
                            android:text="@string/not_determined_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/ipAddressLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/ipaddress_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/ipAddressField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.7"
                            android:text="@string/not_determined_label"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>